changed layout, fixed the whitespace problem

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 nav{
-  background-color: white;
+  background-color: #1b1a1a;
   position: fixed;
   width: 60px;
   height: 100%;
@@ -18,13 +18,13 @@ nav{
 }
 nav a{
   position: relative;
-  color: #b1b1b1;
+  color: white;
   display: block;
   height: 45px;
 }
 
 nav a:hover{
-  color: black;
+  color: #5298d6;
 }
 
 a{
@@ -33,11 +33,7 @@ a{
 }
 
 .active{
-  color: black;
-}
-
-body{
-  overflow-x: hidden;
+  color: #5298d6;
 }
 
 .projects-items{
@@ -159,39 +155,68 @@ body{
   position: relative;
   top: 25%;
 }
+
+#page{
+  background: black;
+  position: relative;
+}
+
 .container{
   top: 10%;
-  left: 15%;
-  position: absolute;
-}
-.profilePic{
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  margin-top: 50px;
+  left: 5%;
+  position: relative;
+  z-index: 1;
 }
 
 .text-zone{
   position: relative;
-  color: grey;
+  color: white;
   top: 10%;
   width: 50%;
   font-size: 18px;
 }
 
+.banner-text-zone{
+  position: absolute;
+  width: 100%;
+  top: 40%;
+  transform: translateY(-50%);
+  color: white;
+  font-family: cursive;
+  text-align: center;
+}
+.banner-text-zone h1{
+  font-size: 7vh;
+}
+
+.right--content{
+  position: absolute;
+  right: 5%;
+  top: 60%;
+
+  transform: translateY(-50%);
+}
+
+.right--content img{
+  width: 300px;
+  height: 300px;
+}
+
 .projects-zone{
   position: relative;
-  color: grey;
+  color: white;
   top: 10%;
-  width: 80%;
+  width: 90%;
   font-size: 18px;
 }
 
 #home {
-  margin-bottom: 5%;
+  min-height: 100vh;
   position: relative;
-  left: -100%;
-  opacity: 0;
+  background-image: url('images/banner.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 }
 #about{
   margin-bottom: 5%;
@@ -201,7 +226,7 @@ body{
 }
 
 #projects{
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   position: relative;
   left: -100%;
   opacity: 0;
@@ -212,35 +237,6 @@ body{
   position: relative;
   left: -100%;
   opacity: 0;
-}
-
-#contact{
- min-height: 100vh;
- position: relative;
- left: -100%;
- opacity: 0;
-}
-form input {
-    background-color: #F4F7F7;
-    color: #0e393b;
-    height: 51.2px;
-    width: 50%;
-    padding-left: 1rem;
-    outline: none;
-    border: none;
-    transition: all 0.2s ease-in 0s;
-}
-
-form textarea {
-    background-color: #F4F7F7;
-    color: #0e393b;
-    height: 102.4px;
-    width: 50%;
-    padding-left: 1rem;
-    padding-top: 1rem;
-    outline: none;
-    border: none;
-    transition: all 0.2s ease-in 0s;
 }
 
 #loading {
@@ -317,4 +313,21 @@ form textarea {
 		transform:scale(.3) rotate(90deg);
 		color:rgb(255,255,255);
 	}
+}
+
+
+::-webkit-scrollbar {
+  width: 5px;
+  color: black;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: white;
+  outline: 1px solid slategrey;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
